about-me dark mode fixed

--- a/portfolio-styles.css
+++ b/portfolio-styles.css
@@ -162,7 +162,7 @@ nav {
 }
 
 .aboutMe-image {
-  width: 40rem;
+  width: 100%;
   height: auto;
   border-radius: 50pt;
   transition: 0.3s;
