--- a/portfolio-styles_dark.css
+++ b/portfolio-styles_dark.css
@@ -170,7 +170,7 @@ nav {
 }
 
 #aboutMe-photo {
-  width: 40rem;
+  width: 100%;
   height: auto;
   border-radius: 50pt;
 }
